# distributed-cpt-aes-api

./: .gitignore  README.md
client/: api_client.py  pyproject.toml  run.sh  run_background.sh  setup.sh  stop.sh  worker.py
client/exp/llm_prompts/toefl11_overall/: Overall.md
client/src/: __init__.py  config.py  run_experiment.py
client/src/data/: __init__.py  data_loader.py  toefl11_loader.py
client/src/evaluation/: __init__.py  metrics.py  visualize.py
client/src/models/: __init__.py  logit_extractor.py  prompts.py  prompts_fewshot.py  scorer.py
client/src/training/: __init__.py  cpt_trainer.py  simple_trainer.py
client/src/utils/: __init__.py  utils.py
server/: init_tasks.py  main.py  pyproject.toml  run.sh  run_background.sh  setup.sh  start_server.sh  status.py  stop.sh  visualize.py  visualize_metrics.py
shared/: __init__.py  models.py
