[project]
name = "cpt-aes-client"
version = "0.1.0"
description = "Client worker for distributed CPT-AES experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "datasets>=3.1.0",
    "accelerate>=1.1.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "tqdm>=4.67.0",
    "requests>=2.32.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "protobuf>=5.0.0",
    "sentencepiece>=0.2.0",
]

[project.scripts]
cpt-worker = "worker:main"

[project.optional-dependencies]
cuda = [
    "einops>=0.8.1",
    "flash-attn>=2.8.3",
    "ninja>=1.13.0",
    "wheel>=0.45.1",
]
