[project]
name = "cpt-aes-server"
version = "0.1.0"
description = "API server for distributed CPT-AES experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "filelock>=3.16.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.12",
    "requests>=2.32.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]

[project.scripts]
cpt-server = "main:run_server"
